# knotebooklm

./: package-lock.json  package.json
apps/pb-backend/: pocketbase.service.example
apps/pb-backend/pb_migrations/: 1743949906_created_notebooks.js  1743950328_updated_notebooks.js  1743952902_updated_notebooks.js  1743953055_updated_notebooks.js  1744195269_created_documents.js  1744553641_updated_documents.js  1744554024_updated_documents.js  1744623341_updated_documents.js  1747100507_updated_documents.js
apps/rag/: .gitignore  README.md  app.py  pyproject.toml
apps/rag/rag/routes/: sources.py
apps/rag/rag/scripts/: request.py
apps/web/: .gitignore  README.md  jsrepo.json  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: app.d.ts  hooks.server.ts
apps/web/src/lib/components/: ArtifactsArea.svelte  ChatArea.svelte  DeleteDocumentModal.svelte  DocumentListView.svelte  NavBar.svelte  NotebookCard.svelte  RenameDocumentModal.svelte  ShowDocumentModal.svelte  SourcesArea.svelte  index.ts
apps/web/src/lib/generators/: index.ts  makeDocument.ts  makeNotebook.ts
apps/web/src/lib/rag-utils/: callRAG.ts  index.ts  ragAddDocument.ts  ragChat.ts
apps/web/src/lib/schemas/: addTextSchema.ts
apps/web/src/lib/state/: notebook.svelte.ts
apps/web/src/lib/stores/: notebook.js  notebook.ts
apps/web/src/lib/types/: database.ts  index.ts  rag.ts
apps/web/src/lib/utilities/: generatePocketBaseId.ts  index.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/: app.css
(+25 files in other folders)
