[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "kruckenberg",email = "nkruckenberg@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-core (>=0.3.41,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry.scripts]
start = "app:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
